--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.7",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/stack": "^6.2.3",
     "react": "18.1.0",
-    "react-native": "0.70.0"
+    "react-native": "0.70.0",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.6.0",
+    "react-native-login-screen": "^4.1.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.0.0-rc.5",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
+    "react-native-text-input-interactive": "^0.1.4",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
