--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^3.13.0",
     "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
@@ -17,6 +18,7 @@
     "react-native": "0.70.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.6.0",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-login-screen": "^4.1.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.0.0-rc.5",
